[tool.poetry]
name = "nmigen_dg"
version = "0.2.0"
description = ""
authors = ["Peder Bergebakken Sundt <pbsds@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nmigen = {git = "https://github.com/nmigen/nmigen"}
dg = {git = "https://github.com/pbsds/dg", rev = "poetry"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
